fix fonts not showing up

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,41 +1,41 @@
 @font-face {
     font-family: 'Vazirmatn';
-    src: url('/public/fonts/Vazirmatn.ttf') format("truetype");
+    src: url('/fonts/Vazirmatn.ttf') format("truetype");
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('/public/fonts/Gilroy Regular.ttf') format("truetype");
+    src: url('/fonts/Gilroy Regular.ttf') format("truetype");
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('/public/fonts/Gilroy Medium.ttf') format("truetype");
+    src: url('/fonts/Gilroy Medium.ttf') format("truetype");
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('/public/fonts/Gilroy SemiBold.ttf') format("truetype");
+    src: url('/fonts/Gilroy SemiBold.ttf') format("truetype");
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('/public/fonts/Gilroy Bold.ttf') format("truetype");
+    src: url('/fonts/Gilroy Bold.ttf') format("truetype");
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('/public/fonts/Gilroy ExtraBold.ttf') format("truetype");
+    src: url('/fonts/Gilroy ExtraBold.ttf') format("truetype");
     font-weight: 800;
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('/public/fonts/Gilroy Heavy.ttf') format("truetype");
+    src: url('/fonts/Gilroy Heavy.ttf') format("truetype");
     font-weight: 900;
 }
 
@@ -119,6 +119,18 @@ html.dark {
 
 html.light {
     background-color: var(--light-bg-color);
+}
+
+@media (prefers-color-scheme: dark) {
+    html.dark {
+        background-color: var(--dark-bg-color);
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    html.light {
+        background-color: var(--light-bg-color);
+    }
 }
 
 
